src/components/Home/Home.css
.header-home {
    display: flex;
    height: 100vh;
    background-color: #1f2235;
    background: url(../../Assets/images/nordwood-themes-kRNZiGKtz48-unsplash.jpg);
    background-position: 50% 50%;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    background-size: cover;
    background-attachment: fixed;
}

.h1Home {
    color: #ffcb84e6;
    font-family: 'IBM Plex Mono', monospace;
}

.names {
    margin: 378px auto;
}

.hello {
    font-size: 45px;
    color: black;
    font-family: 'Anonymous Pro', monospace;
}

.developpeur {
    font-size: 55px;
}

.image-dev img {
    height: 100vh;
    /* padding: 0px 0px 0px 25px; */
    filter: drop-shadow(0 0 0.75rem #2f3451);
    /* opacity: 0.40; */
    width: 674px;
    margin-right: 21px;
}

.titleScroll1 {
    display: block;
    text-align: center;
    font-size: 25px;
    color: black;
    position: fixed;
    top: 87%;
    right: 8%;
}

.titleScroll2 {
    display: block;
    text-align: center;
    font-size: 25px;
    color: black;
    position: fixed;
    top: 85%;
    right: 8%;
}

.demo a {
    cursor: none;
    position: absolute;
    bottom: 0%;
    right: 8%;
    z-index: 2;
    display: inline-block;
    -webkit-transform: translate(0, -50%);
    transform: translate(0, -50%);
    color: rgb(0, 0, 0);
    font: normal 400 20px/1 'Josefin Sans', sans-serif;
    letter-spacing: .1em;
    text-decoration: none;
    transition: opacity .3s;
    /* background-color: rgb(255 247 247 / 38%); */
}

/* .demo a:hover {
    opacity: .5;
} */

#section07 a {
    padding-top: 80px;
}

#section07 a span {
    position: absolute;
    top: 0;
    left: 50%;
    width: 24px;
    height: 24px;
    margin-left: -12px;
    border-left: 1px solid rgb(0, 0, 0);
    border-bottom: 1px solid rgb(0, 0, 0);
    -webkit-transform: rotate(-45deg);
    transform: rotate(-45deg);
    -webkit-animation: sdb07 2s infinite;
    animation: sdb07 2s infinite;
    opacity: 0;
    box-sizing: border-box;
}

#section07 a span:nth-of-type(1) {
    -webkit-animation-delay: 0s;
    animation-delay: 0s;
}

#section07 a span:nth-of-type(2) {
    top: 16px;
    -webkit-animation-delay: .15s;
    animation-delay: .15s;
}

#section07 a span:nth-of-type(3) {
    top: 32px;
    -webkit-animation-delay: .3s;
    animation-delay: .3s;
}

@-webkit-keyframes sdb07 {
    0% {
        opacity: 0;
    }
    50% {
        opacity: 1;
    }
    100% {
        opacity: 0;
    }
}

@keyframes sdb07 {
    0% {
        opacity: 0;
    }
    50% {
        opacity: 1;
    }
    100% {
        opacity: 0;
    }
}

.text {
    background-position: 50% 50%;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
}

.text p {
    padding: 25px;
    width: 60%;
    margin: auto;
    text-align: left;
    font-size: 20px;
}

.annimationTechnos {
    margin: auto;
    text-align: center;
    font-size: 55px;
    /* padding: 43px; */
}

.annimationLanguages {
    margin: auto;
    text-align: center;
    font-size: 55px;
}

.containerLanguage {
    margin: 10px auto;
    height: 55vh;
    overflow: hidden;
}

.containerLanguages {
    margin: 10px auto;
    height: 100vh;
    overflow: hidden;
}

.containerLanguages img {
    margin: 5% auto;
    width: 100%;
}

.imgLanguages {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.imgLanguages img {
    text-align: center;
    width: 700px;
    margin: auto;
    max-height: 50vh;
}

.containerLanguagesAll {
    height: auto;
    width: 100%;
    background-color: #1f2235;
    /* background: url(../../Assets/images/bckground.jpg); */
    background-position: 50% 50%;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    background-size: cover;
    background-attachment: fixed;
}

@media (max-width: 900px) {
    .image-dev img {
        display: none;
    }
    .header-home {
        display: flex;
        height: 100vh;
        background-color: #1f2235;
        background: url(../../Assets/images/imageedit_5_7822050368.jpg);
        background-position: 100% 47px;
        background-repeat: no-repeat;
        background-size: cover;
        position: relative;
        background-attachment: fixed;
    }
    .names {
        margin: auto;
        padding: 19px;
    }
    .hello {
        font-size: 39px;
        position: absolute;
        left: 16%;
        top: 30%;
        color: white;
    }
    .nodeJs {
        margin-top: 60px;
        /* max-height: 35vh; */
    }
    .nodeJs img {
        width: 300px;
        margin: 136px;
    }
    .containerLanguages {
        margin: 10px auto;
        height: 55vh;
        overflow: hidden;
    }
    .containerLanguages img {
        height: 25vh;
        overflow: hidden;
        margin: auto;
        width: 100%;
    }
}

